<resources>
    <string name="app_name" translatable="false">Spider SFTP</string>
    <string name="connect_to">Connect to</string>
    <string name="ip_address">IP address</string>
    <string name="port_hint">Port</string>
    <string name="username">Username</string>
    <string name="use_pem_key_file">Use PEM key file</string>
    <string name="password">Password</string>
    <string name="choose_pem_private_key">Choose PEM private key…</string>
    <string name="password_protected_key">Password-protected key</string>
    <string name="pem_password">PEM password</string>
    <string name="connect">Connect</string>
    <string name="icon">Icon</string>
    <string name="upload">Upload</string>
    <string name="sftp_folder">SFTP folder</string>
    <string name="connecting">Connecting…</string>
    <string name="file_uploaded">File uploaded.</string>
    <string name="upload_error">Upload error: %s</string>
    <string name="read_error">Read error: %s</string>
    <string name="delete_error">Delete error: %s</string>
    <string name="deleted_ok">Deleted successfully.</string>
    <string name="downloading_message">Downloading \"%s\" (%.2f)</string>
    <string name="download_error">Download error: %s</string>
    <string name="file_downloaded_message">File downloaded in: \"%s\"</string>
    <string name="something_missing">Something is missing…</string>
    <string name="connection_error">Could not connect</string>
    <string name="no_pem_loaded">No PEM file loaded!</string>
    <string name="please_write_password">Please, input a password</string>
    <string name="invalid_port">Invalid port!</string>
    <string name="storage_permission_required">Storage permission is required to use this app.</string>
    <string name="delete_folder_question">Do you want to delete \"%s\" and all its contents?</string>
    <string name="links_unsupported">Can\'t manipulate links!</string>
    <string name="select_action">Select an action for \"%s\":</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="save_passwords">Save passwords</string>
    <string name="pem_key_error">The selected key is not in PEM format.</string>
    <string name="could_not_read_key">Could not read the key!</string>
    <string name="private_key_selected">Private key selected</string>
    <string name="github">GitHub</string>
    <string name="open_source_libraries">Open-source libraries</string>
    <string name="uploading">Uploading \"%s\"…</string>
</resources>